Updates docker config to add updater

--- a/common-services.yml
+++ b/common-services.yml
@@ -32,6 +32,12 @@ services:
       CHECK_UPDATE_INTERVAL: true
       UPDATE_INTERVAL_HOURS: 10
 
+  updater:
+    extends:
+      service: server
+    build:
+      target: updater
+
   initialize_data:
     extends:
       service: server
