--- a/.github/workflows/runnable-console-updater.yml
+++ b/.github/workflows/runnable-console-updater.yml
@@ -18,27 +18,36 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: set App id for staging
-        if: ${{ inputs.environment == 'staging' }} 
-        run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
-        env:
-          APP_ID: ${{ secrets.STAGING_HEROKU_APP_ID }}
-
-      - name: set App id for production
-        if: ${{ inputs.environment == 'production' }} 
-        run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
-        env:
-          APP_ID: ${{ secrets.PRODUCTION_HEROKU_APP_ID }}
-
-      - name: Build Containers
-        run : docker compose -f docker-compose.updater.yml --profile process-commands-in-ci build
-
-      - name: Run command ${{ inputs.command }}
-        run: |
-          echo "::add-mask::DATABASE_URL"
-          export DATABASE_URL=$(heroku config:get DATABASE_URL -a $APP_ID)
-          docker compose -f docker-compose.updater.yml --profile process-commands-in-ci up --exit-code-from test_service
-        env:
-          CONSOLE_COMMAND: ${{ inputs.command }}
+      - id: updater
+        uses: actions/updater@main
+        with:
+          command: ${{ inputs.command }}
+          environment: ${{ inputs.environment }}
+          STAGING_HEROKU_APP_ID: ${{ secrets.STAGING_HEROKU_APP_ID }}
+          PRODUCTION_HEROKU_APP_ID: ${{ secrets.PRODUCTION_HEROKU_APP_ID }}
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          APP_ID: ${{ env.APP_ID }}
+
+      # - name: set App id for staging
+      #   if: ${{ inputs.environment == 'staging' }} 
+      #   run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
+      #   env:
+      #     APP_ID: ${{ secrets.STAGING_HEROKU_APP_ID }}
+
+      # - name: set App id for production
+      #   if: ${{ inputs.environment == 'production' }} 
+      #   run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
+      #   env:
+      #     APP_ID: ${{ secrets.PRODUCTION_HEROKU_APP_ID }}
+
+      # - name: Build Containers
+      #   run : docker compose -f docker-compose.updater.yml --profile process-commands-in-ci build
+
+      # - name: Run command ${{ inputs.command }}
+      #   run: |
+      #     echo "::add-mask::DATABASE_URL"
+      #     export DATABASE_URL=$(heroku config:get DATABASE_URL -a $APP_ID)
+      #     docker compose -f docker-compose.updater.yml --profile process-commands-in-ci up --exit-code-from test_service
+      #   env:
+      #     CONSOLE_COMMAND: ${{ inputs.command }}
+      #     HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      #     APP_ID: ${{ env.APP_ID }}
