--- a/.github/workflows/runnable-console-updater.yml
+++ b/.github/workflows/runnable-console-updater.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - id: updater
-        uses: actions/updater@main
+        uses: ./.github/actions/updater
         with:
           command: ${{ inputs.command }}
           environment: ${{ inputs.environment }}
