--- a/.github/workflows/dispatch-typeorm-command.yml
+++ b/.github/workflows/dispatch-typeorm-command.yml
@@ -23,8 +23,27 @@ on:
 
 jobs:
   dispatch-typeorm-command:
-    uses: ./.github/workflows/runnable-typeorm-command.yml
-    with:
-      command: ${{ inputs.command }}
-      environment: ${{ inputs.environment }}
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: set App id for staging
+        if: ${{ inputs.environment == 'staging' }} 
+        run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
+        shell: bash
+        env:
+          APP_ID: ${{ secrets.STAGING_HEROKU_APP_ID }}
+
+      - name: set App id for production
+        if: ${{ inputs.environment == 'production' }} 
+        run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
+        shell: bash
+        env:
+          APP_ID: ${{ secrets.PRODUCTION_HEROKU_APP_ID }}
+
+      - uses: actions/checkout@v3
+      - id: typeorm
+        # uses: opensandiego/sdvv-backend/.github/actions/typeorm@main
+        uses: ./.github/actions/typeorm@main
+        with:
+          command: ${{ inputs.command }}
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          APP_ID: ${{ env.APP_ID }}
