Changed ref to typeorm action in deploy workflow

--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -28,7 +28,7 @@ jobs:
 
       - id: typeorm
         # uses: opensandiego/sdvv-backend/.github/actions/typeorm@main
-        uses: ./.github/actions/typeorm@main
+        uses: ./.github/actions/typeorm
         with:
           command: migration:run
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
