--- a/.github/workflows/run-scheduled-updates.yml
+++ b/.github/workflows/run-scheduled-updates.yml
@@ -3,7 +3,8 @@ name: Run Scheduled Updates
 on:
   schedule:
   # Staging Schedule
-  - cron: '10 3 * * *'
+  # - cron: '10 3 * * *'
+  - cron: '10 * * * *'
   - cron: '25 3 * * *' # change last * to sat after testing
   - cron: '40 3 * * sun'
 
@@ -14,13 +15,14 @@ on:
 
 jobs:
   run-updater-transactions-current-staging:
-    if: github.event.schedule == '10 3 * * *'
+    # if: github.event.schedule == '10 3 * * *'
+    if: github.event.schedule == '10 * * * *'
     name: Update Transactions Current on Staging
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - id: updater
-        uses: opensandiego/sdvv-backend/.github/actions/updater@main
+        uses: ./.github/actions/updater
         with:
           command: update-transactions-current
           environment: staging
@@ -35,7 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: updater
-        uses: opensandiego/sdvv-backend/.github/actions/updater@main
+        uses: ./.github/actions/updater
         with:
           command: update-transactions-past
           environment: staging
@@ -50,7 +52,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: updater
-        uses: opensandiego/sdvv-backend/.github/actions/updater@main
+        uses: ./.github/actions/updater
         with:
           command: update-candidates-current
           environment: staging
@@ -66,7 +68,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: updater
-        uses: opensandiego/sdvv-backend/.github/actions/updater@main
+        uses: ./.github/actions/updater
         with:
           command: update-transactions-current
           environment: production
@@ -81,7 +83,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: updater
-        uses: opensandiego/sdvv-backend/.github/actions/updater@main
+        uses: ./.github/actions/updater
         with:
           command: update-transactions-past
           environment: production
@@ -96,7 +98,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: updater
-        uses: opensandiego/sdvv-backend/.github/actions/updater@main
+        uses: ./.github/actions/updater
         with:
           command: update-candidates-current
           environment: production
