--- a/.github/actions/updater/action.yml
+++ b/.github/actions/updater/action.yml
@@ -4,14 +4,8 @@ inputs:
   command:
     required: true
     type: string
-  environment:
+  APP_ID:
     required: true
-    type: string
-  STAGING_HEROKU_APP_ID:
-    required: false
-    type: string
-  PRODUCTION_HEROKU_APP_ID:
-    required: false
     type: string
   HEROKU_API_KEY:
     required: true
@@ -21,20 +15,6 @@ runs:
   using: "composite"
 
   steps:
-    - name: set App id for staging
-      if: ${{ inputs.environment == 'staging' }} 
-      run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
-      shell: bash
-      env:
-        APP_ID: ${{ inputs.STAGING_HEROKU_APP_ID }}
-
-    - name: set App id for production
-      if: ${{ inputs.environment == 'production' }} 
-      run: echo "APP_ID=$(echo $APP_ID)" >> $GITHUB_ENV
-      shell: bash
-      env:
-        APP_ID: ${{ inputs.PRODUCTION_HEROKU_APP_ID }}
-
     - name: Build Containers
       run : docker compose -f docker-compose.updater.yml --profile process-commands-in-ci build
       shell: bash
@@ -48,4 +28,4 @@ runs:
       env:
         CONSOLE_COMMAND: ${{ inputs.command }}
         HEROKU_API_KEY: ${{ inputs.HEROKU_API_KEY }}
-        APP_ID: ${{ env.APP_ID }}
+        APP_ID: ${{ inputs.APP_ID }}
