--- a/.github/workflows/dispatch-typeorm-command.yml
+++ b/.github/workflows/dispatch-typeorm-command.yml
@@ -41,7 +41,7 @@ jobs:
 
       - uses: actions/checkout@v3
       - id: typeorm
-        uses: ./.github/actions/typeorm@main
+        uses: ./.github/actions/typeorm
         with:
           command: ${{ inputs.command }}
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
