--- a/common-services.yml
+++ b/common-services.yml
@@ -6,7 +6,6 @@ services:
       target: build
     environment:
       DATABASE_URL: postgres://postgres:example@postgres_db_dev:5432/postgres
-      REDIS_URL: redis://:secret@redis:6379
   
   api:
     extends:
@@ -22,16 +21,6 @@ services:
     ports:
       - 3000:3000
 
-  worker:
-    extends:
-      service: server
-    build:
-      target: worker
-    environment:
-      PURGE_QUEUE: false
-      CHECK_UPDATE_INTERVAL: true
-      UPDATE_INTERVAL_HOURS: 10
-
   updater:
     extends:
       service: server
@@ -41,10 +30,10 @@ services:
   initialize_data:
     extends:
       service: server
-    build: 
+    build:
       target: development
     command: >
-      bash -c "npm run db:initialize:data"
+      bash -c "npm run initialize:data"
 
   run_migrations:
     extends:
@@ -87,18 +76,13 @@ services:
       retries: 5
       start_period: 10s
 
-  redis:
-    image: redis:alpine
-    healthcheck:
-      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 10s
+  postgres_ssl:
+    extends:
+      service: postgres_base
     command: >
-     --requirepass secret 
-    ports:
-     - 6379:6379
+      -c ssl=on 
+      -c ssl_cert_file=/etc/ssl/private/server.crt 
+      -c ssl_key_file=/etc/ssl/private/server.key
 
   tester:
     image: bash:4.4
