Removes reference to stand-alone worker from docker and config files.

--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "npm run build:web && npm run build:worker && npm run build:updater",
+    "build": "npm run build:web && npm run build:updater",
     "build:web": "nest build sdvv-backend-nest",
-    "build:worker": "nest build standalone-worker",
     "build:updater": "nest build update-command",
+    "preinitialize:data": "npm run build:updater",
+    "initialize:data": "export COMMAND=initialize-data && node dist/apps/update-command/main",
     "db:migration:run": "npm run typeorm migration:run -- -d ./orm-data-source.ts",
-    "db:initialize:data": "node -r ts-node/register apps/standalone-worker/src/console.ts initialize-data",
     "db:migration:revert": "npm run typeorm migration:revert -- -d ./orm-data-source.ts",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:web:dev": "nest start sdvv-backend-nest --watch",
-    "start:worker:dev": "nest start standalone-worker --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod:web": "node dist/apps/sdvv-backend-nest/main",
-    "start:prod:worker": "node dist/apps/standalone-worker/main",
     "start:prod:updater": "node dist/apps/update-command/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
