--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
     "@apollo/server": "^4.6.0",
     "@nestjs/apollo": "^11.0.4",
     "@nestjs/axios": "^2.0.0",
@@ -53,6 +54,7 @@
     "cache-manager-ioredis-yet": "^1.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-fetch": "^3.1.5",
     "currency.js": "^2.0.4",
     "dotenv": "^16.0.3",
     "expose-gc": "^1.0.0",
