--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "typeorm": "^0.3.12",
     "typescript": "^5.0.3",
     "winston": "^3.8.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.3.0",
