Changed ubuntu version from latest to 22.04 in deploy action.

--- a/.github/workflows/deploy-heroku-runnable.yml
+++ b/.github/workflows/deploy-heroku-runnable.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploy-to-heroku:
     name: Deploy to  ${{ inputs.environment }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     environment:
       name: ${{ inputs.environment }}
       url: "https://${HEROKU_APP_ID}.herokuapp.com"
