Changed ubuntu version from latest to 22.04 in all github workflows.
This is needed since ubuntu-latest does hot have Heroku installed.

--- a/.github/workflows/dispatch-typeorm-command.yml
+++ b/.github/workflows/dispatch-typeorm-command.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   dispatch-typeorm-command:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: set App id for staging
         if: ${{ inputs.environment == 'staging' }} 
