--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/sdvv-backend-nest/test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-esm"
+    "typeorm": "ts-node ./node_modules/.bin/typeorm"
   },
   "dependencies": {
     "@apollo/client": "^3.13.5",
